--- a/index.html
+++ b/index.html
@@ -11,16 +11,25 @@
     <link rel="manifest" href="assests/favicon/site.webmanifest">
     <link rel="mask-icon" href="assests/favicon/safari-pinned-tab.svg" color="#5bbad5">
     <link rel="stylesheet" href="./assests/font/stylesheet.css">
+    <link rel="stylesheet" href="./assests/styles/main.css">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <script src="./assests/js/script.js"></script>
 </head>
 
-<style>
-   
-</style>
-
 <body>
+    <header id="header" class="header">
 
+    </header>
+
+
+    <footer id="footer">
+
+    </footer>
+    <script>
+        load("header", "./templates/header.html");
+        load("footer", "./templates/footer.html");
+    </script>
 </body>
 
 </html>
