"dark mode theme"

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="./assests/styles/main.css">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <script src="./assests/js/script.js"></script>
 </head>
 
 <body>
@@ -26,10 +25,10 @@
     <footer id="footer">
 
     </footer>
-    <script>
-        load("header", "./templates/header.html");
-        load("footer", "./templates/footer.html");
-    </script>
+   
 </body>
-
+<script src="./assests/js/script.js" defer></script>
+<script>
+   
+</script>
 </html>
